src-tauri/tests/snapshots/parsers_snapshot__cline_detail.snap
---
source: tests/parsers_snapshot.rs
expression: detail
---
{
  "summary": {
    "id": "1740825600000",
    "agent_type": "cline",
    "folder_path": "/tmp/demo",
    "folder_name": "demo",
    "title": "ping",
    "started_at": "[ts]",
    "ended_at": "[ts]",
    "message_count": 2,
    "model": null,
    "git_branch": null,
    "archived": false
  },
  "turns": [
    {
      "id": "1740825600000-1",
      "role": "user",
      "blocks": [
        {
          "type": "text",
          "text": "ping"
        }
      ],
      "timestamp": "[ts]",
      "completed_at": "[ts]"
    },
    {
      "id": "1740825600000-2",
      "role": "assistant",
      "blocks": [
        {
          "type": "text",
          "text": "pong"
        }
      ],
      "timestamp": "[ts]",
      "usage": {
        "input_tokens": 10,
        "output_tokens": 20,
        "cache_creation_input_tokens": 0,
        "cache_read_input_tokens": 3
      },
      "duration_ms": 1000,
      "model": "claude-sonnet-4-6",
      "completed_at": "[ts]"
    }
  ],
  "session_stats": {
    "total_usage": {
      "input_tokens": 10,
      "output_tokens": 20,
      "cache_creation_input_tokens": 0,
      "cache_read_input_tokens": 3
    },
    "total_tokens": 33,
    "total_duration_ms": 1000
  }
}
