src-tauri/tests/snapshots/parsers_snapshot__codex_detail.snap
---
source: tests/parsers_snapshot.rs
expression: detail
---
{
  "summary": {
    "id": "codex-sess-001",
    "agent_type": "codex",
    "folder_path": "/tmp/demo",
    "folder_name": "demo",
    "title": "ping",
    "started_at": "[ts]",
    "ended_at": "[ts]",
    "message_count": 2,
    "model": "gpt-5.1-codex",
    "git_branch": "main",
    "archived": false
  },
  "turns": [
    {
      "id": "turn-0",
      "role": "user",
      "blocks": [
        {
          "type": "text",
          "text": "ping"
        }
      ],
      "timestamp": "[ts]",
      "completed_at": "[ts]"
    },
    {
      "id": "turn-1",
      "role": "assistant",
      "blocks": [
        {
          "type": "text",
          "text": "pong"
        }
      ],
      "timestamp": "[ts]",
      "duration_ms": 1000,
      "completed_at": "[ts]"
    }
  ],
  "session_stats": {
    "total_usage": null,
    "total_duration_ms": 1000
  }
}
