src-tauri/tests/snapshots/parsers_snapshot__codex_list.snap
---
source: tests/parsers_snapshot.rs
expression: summaries
---
[
  {
    "id": "codex-sess-001",
    "agent_type": "codex",
    "folder_path": "/tmp/demo",
    "folder_name": "demo",
    "title": "ping",
    "started_at": "[ts]",
    "ended_at": "[ts]",
    "message_count": 2,
    "model": "gpt-5.1-codex",
    "git_branch": "main",
    "archived": false
  }
]
