src-tauri/tests/snapshots/parsers_snapshot__hermes_list.snap
---
source: tests/parsers_snapshot.rs
expression: conversations
---
[
  {
    "id": "hermes-sess-001",
    "agent_type": "hermes",
    "folder_path": "/Users/demo/proj",
    "folder_name": "proj",
    "title": "助手能力介绍",
    "started_at": "[ts]",
    "ended_at": "[ts]",
    "message_count": 5,
    "model": "gpt-5.5",
    "git_branch": null,
    "archived": false
  },
  {
    "id": "hermes-sess-archived",
    "agent_type": "hermes",
    "folder_path": "/Users/demo/arch",
    "folder_name": "arch",
    "title": "archived one",
    "started_at": "[ts]",
    "ended_at": "[ts]",
    "message_count": 1,
    "model": "gpt-5.5",
    "git_branch": null,
    "archived": true
  }
]
