src-tauri/tests/snapshots/parsers_snapshot__kimi_code_list.snap
---
source: tests/parsers_snapshot.rs
expression: summaries
---
[
  {
    "id": "session_kimi_001",
    "agent_type": "kimi_code",
    "folder_path": "/tmp/demo",
    "folder_name": "demo",
    "title": "build the app",
    "started_at": "[ts]",
    "ended_at": "[ts]",
    "message_count": 2,
    "model": "kimi-k2.7-code",
    "git_branch": null,
    "archived": false
  }
]
